# mulle-regex

./: .gitignore  .touch  CMakeLists.txt  CMakeSourcesAndHeaders.txt  README.md  RELEASENOTES.md  clib.json  mulle_regex.h  mulle_standalone_regex.c  mulle_standalone_regex.h  mulle_utf32regex_substitute.c
.bootstrap/: repositories
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-project.sh  optionaltool  tool
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-extension.sh  environment-project.sh
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  LinkManifestC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: acknowledgments.md.bud  authors.plist  description.md.bud  info.bud.md  properties.plist  usage.bud.md
mulle-regex.xcodeproj/: project.pbxproj
mulle-regex.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
src/: _mulle-regex-include-private.h  _mulle-regex-include.h  include.h  mulle-regex.h  mulle-utf32regex-substitute.c  mulle-utf32regex.c  mulle-utf32regex.h  mulle_regex.h  mulle_utf32regex+private.h  mulle_utf32regex.c  mulle_utf32regex.h  mulle_utf32regex_substitute.c  version.h
src/reflect/: _mulle-regex-include.h  _mulle-regex-provide.h  _mulle-regex-versioncheck.h
test/.mulle/etc/env/: environment-host-ci-prerelease.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: environment-project.sh
test/.mulle/share/sde/: mulle-test
test/original/: test.c  test.stdout
test/unicode/: simple.c  simple.stdout  unicode.c  unicode.stdout
tests/: run-test.sh
tests/original/: test.c
